# RecSysProject

./: .gitignore  README.md  pyproject.toml
RecGroupSys/: Makefile  pyproject.toml
RecGroupSys/RecGroupSys/: __init__.py  aggregation.py
RecGroupSys/tests/: test_aggregation.py
notebooks/: Basic_models.ipynb  EDA.ipynb  EDA_basic_models.ipynb  EDA_games.ipynb  EDA_user.ipynb  Proposed_model.ipynb  eval_models.ipynb  preprocessing.ipynb  preprocessing2.ipynb  preprocessing3.ipynb
