[project]
name = "recsysproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.5.1",
    "matplotlib>=3.9.4",
    "notebook>=7.4.4",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "surprise>=0.1",
    "tqdm>=4.67.1",
]
